Containairization/first_pod25-nov.yml
apiVersion: v1
kind: Pod
metadata:
  name: "mypod3"
  namespace: teama
spec:
  containers:
  - name: "myc2"
    image: "httpd"
