Containairization/limitrangepod.yml
apiVersion: v1
kind: Pod
metadata:
  name: default-limitsetauto
spec:
  containers: 
  - name: default-cpu-limit
    image: nginx
