Containairization/limits24march.yml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
spec:
  containers:
  - name: app
    image: httpd
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:              # Hard limit Max limit
        memory: "128Mi"
        cpu: "500m"
