Containairization/dbkustomize11jan.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql		# This name work as Host Name instead IP
  labels:
    app: wordpress
spec:
  ports:
   - port: 3306
  selector:
    app: wordpress
    tier: mysql
  clusterIP: None		#I don't need any IP here
---
apiVersion: apps/v1  # for versions before 1.9.0 use app/v1beta2
kind: Deployment
metadata: 
  name: wordpress-mysql
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  startegy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
	tier: mysql
    spec:
      containers:
      -  image: mysql:5.6
         name: mysql
		name: mysql-pass-secret-file
		key: password
	 ports:
	 - containerPort: 3306
	   name: mysql
 	 volumeMounts:
	 - name: mysql-persistent-storage
	   mountPath: /var/lib/mysql
       volumes:
	 - name: mysql-persistent-storage
	   persistentVolumeClaim:
	     claimName: mysql-pv-claim
