Containairization/load_balancer09-dec.yml
apiVersion: v1
kind: Service
metadata: 
  name: mywebpub
spec:
  type: NodePort
  selector:
    dc: IN 
  ports:
    - port: 80
      targetPort: 80
      #svcPort: 1234
      nodePort: 30001
      #port: 85
      #targetPort: 85
