Containairization/statefulsets-headless-svc24march.yml
# Headless service for stable DNS entries of Statefulsets members
# Headless LB for 1st pod master. 
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  ports:
  - name: mysql
    port: 3306
  clusterIP: None
  selector:
    app: mysql
---

# client service for connecting to any mysql instance for reads
# For writes, you must instead connect to the primary mysql-0.mysql.
# Normal Load balancer, here we didn't put clusterIP none, Slave nodes for read replica connect to Normal LB.

apiVersion: v1
kind: Service
metadata:
  name: mysql-read
  labels:
    app: mysql
spec:
  ports:
  - name: mysql
    port: 3306
  selector:
    app: mysql
