Containairization/wordpresskustomize11jan.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
    labels:
      app: wordpress
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: frontend
  type: NodePort
---
apiVersion: apps/v1  # for versions before 1.9.0 use app/v1beta2
kind: Deployment
metadata: 
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
	tier: frontend
    spec:
      containers:
      -  image: wordpress:4.8-apache
         name: wordpress
		name: mysql-pass-secret-file
		key: password
	 ports:
	 - containerPort: 80
	   name: wordpress
 	 volumeMounts:
	 - name: wordpress-persistent-storage
	   mountPath: /var/www/html
       volumes:
	 - name: wordpress-persistent-storage
	   persistentVolumeClaim:
	     claimName: wp-pv-claim
