Containairization/ingress_nginx24feb.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mywebpath
spec:
  rules:
  - host: www.prashantpapa.com
    http:
      paths:
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: mysearchd
            port: 
               number: 80
      - path: /mail
        pathType: Prefix
        backend:
          service:
            name: mymaild
            port: 
               number: 80
